Fix border outline visible issue in pre block

--- a/src/styles/partials/_code_image.scss
+++ b/src/styles/partials/_code_image.scss
@@ -153,7 +153,7 @@ input[type="color"]::-webkit-color-swatch {
     cursor:pointer;
 }
   .code-image-background {
-    border-radius: 14px;
+    border-radius: 11px;
     background-color: var(--margin-color) !important;
   }
 }
